# rriscv

./: .gitignore  Cargo.toml  rust-toolchain.toml
examples/: gcc.rs  xv6.rs
examples/xv6/: Makefile
src/: cpu.rs  debugger.rs  decoder.rs  disassembler.rs  elf.rs  instruction_format.rs  lib.rs  main.rs  memory.rs  mmio.rs  mmu.rs  opcodes.rs  optypes.rs  pipeline.rs  plic.rs  rriscv.code-workspace  uart.rs  virtio.rs
src/instructions/: btype.rs  cbtype.rs  citype.rs  ciwtype.rs  cjtype.rs  cltype.rs  crtype.rs  csstype.rs  cstype.rs  decoder.rs  functions.rs  itype.rs  jtype.rs  map.rs  mod.rs  opcodes.rs  rtype.rs  stype.rs  utype.rs
tests/: README.md  decode.rs  encode.rs  kernel.rs  memory.rs  perf.rs  riscv-tests.rs  suite.rs  xv6.rs
tests/benchmark/: dhrystone.riscv  qsort.riscv  towers.riscv
